# resnet-bilstm-attention-dt

./: .gitignore  README.md  decision_tree  main.py  pyproject.toml
datasrc/real/: part_mapping.json  process_mapping.json  real_factorydata.xlsx  real_factorydata_oclog.csv  resource_mapping.json  train_no_invalid_entries.csv  type_mapping.json
datasrc/sim/: simulated_data_oclog.csv
src/: connect.py  input_structure.py  output_structure.py  test_connector.py  validate.ipynb
src/_put_in_ofact_project_folder/: learn_resource_settings.py
src/data/: featureeng.py  filter.py  preprocessing.py
src/models/decisiontree/: baseline.py
src/models/resnet-bilstm-attn/: model.py  vis.py
src/models/resnet_bilstm_attn/: dataset.py  model.py  vis.py
src/twin/: order_sim_iot.pkl
src/utils/: analyze_orders.py  exclude_orders.py  kpi_utils.py  reporting.py  time_conversion.py
