[project]
name = "resnet-bilstm-attention-dt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "torch",
    "holidays",
    "graphviz",
    "torchview",
    "seaborn",
]
[tool.setuptools]
package-dir = {"" = "src"}
